XbRelease notes for xmlBlaster (http://www.xmlBlaster.org)
The "r99999" numbers are Subversion revision numbers.

Changes for current svn
=======================
 o 18362 2020-04-22 michele
   implemented a new checkpoint 'update.send' which acts once the entries are extracted from the callback queue and are
   ready to be sent to the client. It currently only acts on non-oneway updates.

 o 18361 2020-03-11 marcel
   xmlBlasterAccess.request() avoid memory leak of response topic which is now destroyed directly after response
   
 o 18359 2020-03-07 marcel
   Creating two optional, additional indexes on xbref and xbmeat DB tables
   create index xbref_xbstoreid_idx ON xbref(xbstoreid);
   create index xbmeat_xbstoreid_idx ON xbmeat(xbstoreid);
   Creates only on empty database and for postgresql.

 o 18356 2019-11-14 adrian
   ConnectReturnQos delivers now __cbQueueNumOfEntries

 o 15350 2019-09-24 michele
   Commented out resetting of xmlRpcClient since causing problems when only communication from callback to client was broken
   while communication from client to server was still ok

 o 18348 2019-08-25 marcel
   Log where xmlBlasterPlugins.xml is loaded from

 o 18346 2019-06-17 michele
   corrected error causing the counter to be reset for the replication dumper

 o 18338 2019-03-15 adrian marcel
   Incompatible change of DropIfNotDeliverable DropIfNotDeliverableUniqueOnly
   Only unsubscribe subscriptions which have declared the above plugins in AccessFilterQos
   Before: All subcriptions were unsubscribed

 o 18336,18337 2019-03-15 adrian marcel
   Added convenience methods for AccessFilter and SubscribeQos access

 o 18333-18335 2019-03-09 marcel
   htPasswd Session.java now strips pubSessionId if such is inside a securityQos.getUserId() (eg "_myService/1" -> "_myService")
   SessionName ctor now assures correct subjectId

 o 18329 2019-01-11 michele